CMAKE_MINIMUM_REQUIRED(VERSION 3.1.1)
PROJECT(osg_test)
SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMakeModules;${CMAKE_MODULE_PATH}")
FIND_PACKAGE(osg)
FILE(GLOB_RECURSE SRC_FILES "src/*.cpp")
FILE(GLOB_RECURSE COMM_FILES "common/*.cpp" "common/*.h")

SET(OSG_PROJECT_SOURCE ${PROJECT_SOURCE_DIR})

INCLUDE_DIRECTORIES(${OSG_PROJECT_SOURCE}/common)


SET(CMAKE_DEBUG_POSTFIX "d")
SET(CMAKE_RELEASE_POSTFIX "")
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)


#EXECUTE_PROCESS(COMMAND "git submodule init" ${OSG_PROJECT_SOURCE})
#EXECUTE_PROCESS(COMMAND "git submodule update" ${OSG_PROJECT_SOURCE})
include_directories ( ${OSG_INCLUDE_DIR} )


FOREACH( APPFILE ${SRC_FILES} )
    GET_FILENAME_COMPONENT( EXE_NAME ${APPFILE} NAME_WLE )
    ADD_EXECUTABLE(${EXE_NAME} ${APPFILE} ${COMM_FILES} ${OSG_PROJECT_SOURCE}/CMakeLists.txt)
    #TARGET_LINK_LIBRARIES(${EXE_NAME} osg osgGA osgUtil osgViewer osgDB osgManipulator osgFX OpenThreads)
    TARGET_LINK_LIBRARIES(${EXE_NAME}
     optimized ${OSG_LIBRARY}
     debug ${OSG_LIBRARY_DEBUG}
     optimized ${OSGGA_LIBRARY}
     debug ${OSGGA_LIBRARY_DEBUG}
     optimized ${OSGUTIL_LIBRARY}
     debug ${OSGUTIL_LIBRARY_DEBUG}   
     optimized ${OSGVIEWER_LIBRARY}
     debug ${OSGVIEWER_LIBRARY_DEBUG}
     optimized ${OSGDB_LIBRARY}
     debug ${OSGDB_LIBRARY_DEBUG}
     optimized ${OSGFX_LIBRARY}
     debug ${OSGFX_LIBRARY_DEBUG}
     optimized ${OSGMANIPULATOR_LIBRARY}
     debug ${OSGMANIPULATOR_LIBRARY_DEBUG}
     optimized ${OPENTHREADS_LIBRARY}
     debug ${OPENTHREADS_LIBRARY_DEBUG}
    )
    SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES DEBUG_OUTPUT_NAME "${EXE_NAME}${CMAKE_DEBUG_POSTFIX}")
    SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES RELEASE_OUTPUT_NAME "${EXE_NAME}${CMAKE_RELEASE_POSTFIX}")
ENDFOREACH()

